--- a/html/Fabu/Jobdetail_frm.html
+++ b/html/Fabu/Jobdetail_frm.html
@@ -102,7 +102,7 @@
                   rect: {
                       x: 0,
                       y: $api.dom('.box').offsetHeight,
-                      w: 'auto',
+                      w: api.frameWidth,
                       h: '200'
                   },
                   center: {
