--- a/html/login_frame.html
+++ b/html/login_frame.html
@@ -309,8 +309,7 @@ function WXbindAccount(ret) {
               });
           api.execScript({
             name: 'root',//你要刷新winName
-            frameName:'frame4',
-            script: jsfun
+            script: 'jsfun'
           });
           api.openWin({
               name: 'index',
