--- a/html/Map/bmap_frm.html
+++ b/html/Map/bmap_frm.html
@@ -17,88 +17,91 @@ body {
 <script type="text/javascript" src="../../script/api.js" ></script>
 <script type="text/javascript">
 
-    var map,
-        lat,
+    var lat,
         lon,
         address;
     apiready = function(){
+        fnMap()
         api.parseTapmode();
-        map = api.require('bMap');
-        api.showProgress({
-            style: 'default',
-            animationType: 'fade',
-            title: '定位中...',
-            text: '请稍候...',
-            modal: false
+    }
+    function fnMap() {
+      map = api.require('bMap'); 
+    api.showProgress({
+        style: 'default',
+        animationType: 'fade',
+        title: '定位中...',
+        text: '请稍候...',
+        modal: false
+    });
+    setTimeout(function(){
+        api.openFrame({
+            name:'bmap_info_frm',
+            url:'bmap_info_frm.html',
+            rect:{
+                x:0,
+                y:70,
+                w:'auto',
+                h:30
+            },
+            bounces:false,
+            vScrollBarEnabled:false,
+            hScrollBarEnabled:false
+        })
+        //打开地图
+        open();
+        map.addEventListener({
+            name: 'viewChange'
+        },function(ret){
+            if(ret.status){
+                lon = ret.lon;
+                lat = ret.lat;
+                getNameFromCoords();
+            }
         });
-        setTimeout(function(){
-            api.openFrame({
-                name:'bmap_info_frm',
-                url:'bmap_info_frm.html',
-                rect:{
-                    x:0,
-                    y:70,
-                    w:'auto',
-                    h:30
-                },
-                bounces:false,
-                vScrollBarEnabled:false,
-                hScrollBarEnabled:false
-            })
-            //打开地图
-            open();
-            map.addEventListener({
-                name: 'viewChange'
-            },function(ret){
-                if(ret.status){
-                    lon = ret.lon;
-                    lat = ret.lat;
-                    getNameFromCoords();
-                }
-            });
-            map.addEventListener({
-                name: 'click'
-            },function(ret){
-                if(ret.status){
-                    lon = ret.lon;
-                    lat = ret.lat;
-                    getNameFromCoords();
-                    api.confirm({
-                        title: '提示',
-                        msg: '是否要定位到此地',
-                        buttons: ['确定', '取消']
-                    }, function(ret, err){
-                        if( ret.buttonIndex == 1 ){
-                          api.execScript({
-                              name: 'JzJob',
-                              frameName:'JzJob_frm',
-                              script:'setInfo(\"' + lon + '\",\"' + lat + '\",\"' + address + '\")'
-                          })
-                          api.execScript({
-                              name: 'QzJob',
-                              frameName:'QzJob_frm',
-                              script:'setInfo(\"' + lon + '\",\"' + lat + '\",\"' + address + '\")'
-                          })
-                          api.execScript({
-                              name: 'DzRelease',
-                              frameName:'DzRelease_frm',
-                              script:'setInfo(\"' + lon + '\",\"' + lat + '\",\"' + address + '\")'
-                          })
-                          api.execScript({
-                              name: 'HzRelease',
-                              frameName:'HzRelease_frm',
-                              script:'setInfo(\"' + lon + '\",\"' + lat + '\",\"' + address + '\")'
-                          })
-                          api.closeWin();
-                        }else{
-                        }
-                    });
+        map.addEventListener({
+            name: 'click'
+        },function(ret){
+            if(ret.status){
+                lon = ret.lon;
+                lat = ret.lat;
+                getNameFromCoords();
+                api.confirm({
+                    title: '提示',
+                    msg: '是否要定位到此地',
+                    buttons: ['确定', '取消']
+                }, function(ret, err){
+                    if( ret.buttonIndex == 1 ){
+                      api.execScript({
+                          name: 'JzJob',
+                          frameName:'JzJob_frm',
+                          script:'setInfo(\"' + lon + '\",\"' + lat + '\",\"' + address + '\")'
+                      })
+                      api.execScript({
+                          name: 'QzJob',
+                          frameName:'QzJob_frm',
+                          script:'setInfo(\"' + lon + '\",\"' + lat + '\",\"' + address + '\")'
+                      })
+                      api.execScript({
+                          name: 'DzRelease',
+                          frameName:'DzRelease_frm',
+                          script:'setInfo(\"' + lon + '\",\"' + lat + '\",\"' + address + '\")'
+                      })
+                      api.execScript({
+                          name: 'HzRelease',
+                          frameName:'HzRelease_frm',
+                          script:'setInfo(\"' + lon + '\",\"' + lat + '\",\"' + address + '\")'
+                      })
+                      api.closeWin();
+                    }else{
+                    }
+                });
 
-                }
-            });
-        },400)
+            }
+        });
+    },400)
     }
     function getNameFromCoords(){
+        map = api.require('bMap');
         map.getNameFromCoords({
             lon: lon,
             lat: lat
@@ -110,16 +113,16 @@ body {
                     script:'setInfo("'+address+'")'
                 })
             }else {
-                console.log(JSON.stringify(err));
             }
         });
     }
     function open(){
+        map = api.require('bMap');
         map.open({
             rect: {
                 x: 0,
                 y: 0,
-                w: 'auto',
+                w: api.frameWidth,
                 h: api.frameHeight
             },
             center: {
@@ -138,6 +141,7 @@ body {
         });
     }
     function getLocation(){
+        map = api.require('bMap');
         map.getLocation({
             accuracy: '10m',
             autoStop: true,
